--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   height: 120px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
-  opacity:0; 
+  opacity:0;
 }
 
 /* Safari */
@@ -22,5 +22,5 @@
 
 .opaque
 {
-  opacity:1;
+  opacity:1 !important;
 }
